--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "d3": "^7.1.1",
@@ -13,6 +14,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "babel-jest": "^27.4.2",
+    "jest": "^27.4.3",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
