--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "d3": "^7.1.1",
+    "luxon": "^2.1.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "recharts": "^2.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
