--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@web3-react/injected-connector": "^6.0.7",
     "d3": "^7.1.1",
     "luxon": "^2.1.1",
     "next": "latest",
