--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "antd": "^4.18.5",
     "d3": "^7.1.1",
     "luxon": "^2.1.1",
     "next": "latest",
