--- a/.env test.local
+++ b/.env test.local
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_GA_ID=G-1TCFWCBPQY
 NEXT_PUBLIC_REACT_APP_IMAGE_BASE_URL=http://localhost:3000
+NEXT_PUBLIC_MORALIS_SERVER_URL=https://9vkqidsik0yo.usemoralis.com:2053/server
+NEXT_PUBLIC_MORALIS_APP_ID=NiqTeahZMNgtksUTnSLW2Lc8dUNsvD5Cnow7nDag
