--- a/package.json
+++ b/package.json
@@ -8,16 +8,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
-    "@web3-react/core": "^6.1.9",
-    "@web3-react/injected-connector": "^6.0.7",
     "antd": "^4.18.5",
     "d3": "^7.1.1",
     "luxon": "^2.1.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "recharts": "^2.0.6",
-    "web3": "^1.6.1"
+    "react-moralis": "^1.3.1",
+    "recharts": "^2.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
