--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@algolia/autocomplete-core": "^1.5.3",
     "@headlessui/react": "^1.4.3",
     "antd": "^4.18.5",
     "d3": "^7.1.1",
@@ -20,8 +21,12 @@
   "devDependencies": {
     "autoprefixer": "^10.2.6",
     "babel-jest": "^27.4.2",
+    "eslint": "^8.10.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^27.4.3",
     "postcss": "^8.3.5",
+    "standard": "^16.0.4",
     "tailwindcss": "^2.2.4"
   }
 }
