--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@headlessui/react": "^1.4.3",
     "antd": "^4.18.5",
     "d3": "^7.1.1",
+    "gray-matter": "^4.0.3",
     "luxon": "^2.1.1",
     "next": "latest",
+    "next-mdx-remote": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.3.1",
+    "react-syntax-highlighter": "^15.4.5",
     "recharts": "^2.0.6"
   },
   "devDependencies": {
