--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "dependencies": {
     "@algolia/autocomplete-core": "^1.5.3",
     "@headlessui/react": "^1.4.3",
+    "@walletconnect/web3-provider": "^1.7.3",
+    "@web3auth/web3auth": "^0.3.3",
     "antd": "^4.18.5",
     "d3": "^7.1.1",
     "gray-matter": "^4.0.3",
     "luxon": "^2.1.1",
+    "magic-sdk": "^8.0.1",
     "next": "latest",
     "next-mdx-remote": "^4.0.0",
     "react": "^17.0.2",
