--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint --fix",
     "test": "jest"
   },
   "dependencies": {
@@ -27,7 +28,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "babel-jest": "^27.4.2",
-    "eslint": "^8.10.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "^12.1.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^27.4.3",
