--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gray-matter": "^4.0.3",
     "luxon": "^2.1.1",
     "magic-sdk": "^8.0.1",
+    "moralis": "^1.3.5",
     "next": "latest",
     "next-mdx-remote": "^4.0.0",
     "react": "^17.0.2",
