--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "latest",
     "next-mdx-remote": "^4.0.0",
     "react": "^17.0.2",
+    "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-moralis": "^1.3.2",
     "react-syntax-highlighter": "^15.4.5",
